Update for POJO doc